--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <body>
     <!-- ====== Header Start ====== -->
     <header class="ud-header">
-      <div class="container">
+      <div class="container m-2">
         <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
@@ -77,10 +77,10 @@
               </div>
 
               <div class="navbar-btn d-none d-sm-inline-block">
-                <a href="login.html" class="ud-main-btn ud-login-btn">
+                <a href="#pricing" class="ud-main-btn ud-login-btn">
                   Sign In
                 </a>
-                <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
+                <a class="ud-main-btn ud-white-btn" href="#pricing">
                   Sign Up
                 </a>
               </div>
@@ -105,12 +105,12 @@
               </p>
               <ul class="ud-hero-buttons">
                 <li>
-                  <a href="#pricing" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-white-btn">
+                  <a href="#pricing" class="ud-main-btn ud-white-btn">
                     Get Leads
                   </a>
                 </li>
                 <li>
-                  <a href="#pricing" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
+                  <a href="#pricing" class="ud-main-btn ud-link-btn">
                     Learn More <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
@@ -305,7 +305,7 @@
                         style="display: flex; justify-content: center; align-items: center;">
                       <input type="email" name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="Email Address" required style="margin-right: 10px; flex-grow: 1; max-width: 65%;">
                       <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="ud-main-btn">
-                          Subscribe
+                        <i class="lni lni-chevron-left"></i>
                       </button>
                   </form>
               </div>
@@ -760,7 +760,7 @@
                             style="display: flex; justify-content: center; align-items: center;">
                           <input type="email" name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="Email Address" required style="margin-right: 10px; flex-grow: 1; max-width: 65%;">
                           <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="ud-main-btn">
-                              Subscribe
+                            <i class="lni lni-chevron-left"></i>
                           </button>
                       </form>
                   </div>
@@ -776,7 +776,8 @@
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="#pricing" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Privacy Policy</a></li>
+          <li class="nav-item"><a href="./privacy.html" class="nav-link px-2 text-muted">Privacy</a></li>
+          <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-muted">Terms</a></li>
         </ul>
         <p class="text-center text-muted">&copy; 2024, LeadCrafter.ai</p>
       </footer>
