Adjusted width of columns on about page

--- a/privacy.html
+++ b/privacy.html
@@ -41,10 +41,10 @@
               </div>
 
               <div class="navbar-btn d-none d-sm-inline-block">
-                <a href="index.html/#pricing" class="ud-main-btn ud-login-btn">
+                <a href="index.html" class="ud-main-btn ud-login-btn">
                   Sign In
                 </a>
-                <a class="ud-main-btn ud-white-btn" href="index.html/#pricing">
+                <a class="ud-main-btn ud-white-btn" href="index.html">
                   Sign Up
                 </a>
               </div>
@@ -68,11 +68,11 @@
     <!-- ====== Banner End ====== -->
 
     <!-- ====== About Start -->
-    <section id="about" class="ud-about">
+    <section id="about" class="ud-terms">
       <div class="container">
-          <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
-            <div class="ud-about-content-wrapper">
-              <div class="ud-about-content">
+          <div class="ud-terms-wrapper wow fadeInUp" data-wow-delay=".2s">
+            <div class="ud-terms-content-wrapper">
+              <div class="ud-terms-content">
                 <span class="tag">Privacy Policy</span>
                 <h1>LeadCrafter.ai Privacy Policy</h1>
                 <p>as of April 28, 2024</p>
@@ -334,6 +334,18 @@
       </div>
     </section>
    <!--  ====== About End ====== -->
+   <!-- ====== Start Footer ====== -->
+   <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="index.html#pricing" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="./privacy.html" class="nav-link px-2 text-muted">Privacy</a></li>
+        <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-muted">Terms</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2024, LeadCrafter.ai</p>
+    </footer>
+  </div>
+  <!-- ====== End Footer ====== -->
 
 
     <!-- ====== Back To Top Start ====== -->
