--- a/about.html
+++ b/about.html
@@ -74,11 +74,11 @@
     <!-- ====== Banner End ====== -->
 
     <!-- ====== About Start -->
-    <section id="about" class="ud-about">
+    <section id="about" class="ud-terms">
       <div class="container">
-          <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
-            <div class="ud-about-content-wrapper">
-              <div class="ud-about-content">
+          <div class="ud-terms-wrapper wow fadeInUp" data-wow-delay=".2s">
+            <div class="ud-terms-content-wrapper">
+              <div class="ud-terms-content">
                 <span class="tag">Terms & Condition</span>
                 <h2>General Terms & Conditions of Use</h2>
                 <p>
